# adaptive_huffman_encoder

./: .gitignore  CMakeLists.txt  FEEDBACK.md  README.md  sources
assignment/: opgave.md
extra/: README.md  bible_compression_time.txt  results.md  verslag.md
src/: main.c
src/decode/: decode.c  decode.h
src/encode/: encode.c  encode.h  encode_strategy.c  encode_strategy.h  minimum_cuts.c  minimum_cuts.h  trie.c  trie.h
src/misc/: bit_stream.c  bit_stream.h  util.c  util.h
src/tree/: internal_trie.c  internal_trie.h  node.c  node.h  node_array_list.c  node_array_list.h  tree.c  tree.h
tests/: README.md  test.c  test.h
tests/compress_test_files/: bible_compression_test.sh  bible_decompression_test.sh  compression_test.sh  download_test_files.sh  lorem_ipsum.txt  result.txt  temp
tests/compress_test_files/canterbury_corpus/: gutenberg_psyche.txt
